# ObjectTracking

./: CMakeLists.txt  README.md
src/: camshiftTracker.cpp  coloredObjectTracker.cpp  farnebackTracker.cpp  goodFeaturesToTrack.cpp  harrisCornersTracker.cpp  lucasKanadeTracker.cpp
